add background image

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Team BugCV</title>
-  <meta name="description" content="A simple HTML5 Template for new projects.">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Team BugCV">
+  <meta name="author" content="Team BugCV">
 
-  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:title" content="Team bugCV">
   <meta property="og:type" content="website">
 
-  <meta property="og:image" content="image.png">
+  <meta property="og:image" content="team_bugcv_group_pic.png">
 
   <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
